# gluino

./: Cargo.toml  LICENSE  README.md  TODO.md
src/: compiled_spec.rs  compiled_spec_visitor_pattern.rs  fingerprint.rs  lib.rs  ser.rs  spec.rs  spec_parsing.rs  test_utils.rs  util.rs
src/serde/: de_imples.rs  de_impls.rs  encode.rs  mod.rs  ser_impls.rs
