[package]
name = "gluino"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/jklamer/Gluino"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
description = "A library for working with/serializing data using the Gluino spec."
[dependencies]
serde = {version = "1.0.143", features = ["derive"] }
strum = {version = "0.24.1", features = ["derive"] }
strum_macros = {version = "0.24.1"}
sha2="0.10.6"